--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 $days: 31;
-$month-length: 28, 29, 30, 31;
-$start-day: mon, thu, wed, thu, fri, sat, sun;
+$month-length: (28, 29, 30, 31);
+$start-day: (mon, thu, wed, thu, fri, sat, sun);
 $gap: 1px;
 $cell-size: 100px;
 
@@ -36,9 +36,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition-duration: 0.5s;
 
     &:hover {
-      transition-duration: 0.5s;
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
