--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,14 @@
 $days: 31;
 $month-length: 28, 29, 30, 31;
-$start-day: mon, thu, wed, thu, fri, sat, sun;
+$start-days: (
+  'mon': 0,
+  'tue': 101px,
+  'wed': 202px,
+  'thu': 303px,
+  'fri': 404px,
+  'sat': 505px,
+  'sun': 606px,
+);
 
 body {
   margin: 0;
@@ -16,7 +24,26 @@ body {
   padding: 0;
   list-style: none;
   cursor: pointer;
-  margin: 81.5px auto;
+  margin: 81.5px auto 0;
+
+  @each $start-day, $offset in $start-days {
+    &--start-day-#{$start-day} .calendar__day--1 {
+      margin-left: $offset;
+    }
+  }
+
+  // &--start-day-wed {
+  //   margin-top: 132px;
+  // }
+
+  &--month-length-29 :nth-child(30),
+  &--month-length-29 :nth-child(31) {
+    display: none;
+  }
+
+  &--month-length-30 :nth-child(31) {
+    display: none;
+  }
 }
 
 .calendar__day {
@@ -27,15 +54,12 @@ body {
   border: 1px solid black;
   background-color: #eee;
   text-align: center;
-  transition-duration: 0.5s;
+  transition-duration: 0.2s, 0.5s;
+  transition-property: background-color;
 
   &:hover {
     background-color: #ffbfcb;
     transform: translate(0, -20px);
-  }
-
-  &--1 {
-    margin-left: 606px;
   }
 }
 
