--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,8 +10,16 @@ $start-days: (
   'sun': 606px,
 );
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar {
@@ -24,7 +32,6 @@ body {
   padding: 0;
   list-style: none;
   cursor: pointer;
-  margin: 81.5px auto 0;
 
   @each $start-day, $offset in $start-days {
     &--start-day-#{$start-day} .calendar__day--1 {
@@ -32,30 +39,26 @@ body {
     }
   }
 
-  // &--start-day-wed {
-  //   margin-top: 132px;
-  // }
-
-  &--month-length-29 :nth-child(30),
-  &--month-length-29 :nth-child(31) {
-    display: none;
-  }
-
-  &--month-length-30 :nth-child(31) {
-    display: none;
+  @for $i from 1 through 3 {
+    &--month-length-#{31 - $i} :nth-last-child(-n + #{$i}) {
+      display: none;
+    }
   }
 }
 
 .calendar__day {
   position: relative;
+  display: flex;
+  color: black;
   box-sizing: border-box;
   width: 100px;
   height: 100px;
   border: 1px solid black;
   background-color: #eee;
-  text-align: center;
   transition-duration: 0.2s, 0.5s;
   transition-property: background-color;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     background-color: #ffbfcb;
@@ -66,10 +69,5 @@ body {
 @for $i from 1 through $days {
   .calendar__day--#{$i}:after {
     content: '#{$i}';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
   }
 }
