--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,18 @@
-@import './utils/variables';
+$calendar-padding: 10px;
+$element-day-size: 100px;
+$space-between-days: 1px;
+$max-width-calendar: (
+  7 * $element-day-size + 6 * $space-between-days + 2 * $calendar-padding
+);
+$days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
 
 html {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
@@ -41,15 +55,14 @@ body {
     }
   }
 
-  @each $day, $count in $days {
-    &--start-day-#{$day} {
-      :first-child {
-        margin-left: (
-          ($element-day-size * $count) + ($space-between-days * $count)
-        );
-      }
+  &--start-day-#{$day} {
+    :first-child {
+      margin-left: calc(
+        #{$element-day-size * $count} + #{$space-between-days * $count}
+      );
     }
   }
+
 
   @for $i from 1 through 31 {
     &__day:nth-child(#{$i}) {
@@ -61,9 +74,10 @@ body {
 
   @for $number-days from 28 through 31 {
     &--month-length-#{$number-days} {
-      :nth-child(n + #{$number-days + 1}) {
+      &:nth-child(n + #{($number-days + 1)}) {
         display: none;
       }
     }
   }
 }
+
