--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,14 @@
 $days: 31;
-$month-length: 28, 29, 30, 31;
 $start-days: (
   'mon': 0,
-  'tue': 101px,
-  'wed': 202px,
-  'thu': 303px,
-  'fri': 404px,
-  'sat': 505px,
-  'sun': 606px,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
 );
+$square: 100px;
 
 html {
   height: 100%;
@@ -35,7 +35,7 @@ body {
 
   @each $start-day, $offset in $start-days {
     &--start-day-#{$start-day} .calendar__day--1 {
-      margin-left: $offset;
+      margin-left: ($square + 1) * $offset;
     }
   }
 
@@ -51,8 +51,8 @@ body {
   display: flex;
   color: black;
   box-sizing: border-box;
-  width: 100px;
-  height: 100px;
+  width: $square;
+  height: $square;
   border: 1px solid black;
   background-color: #eee;
   transition-duration: 0.2s, 0.5s;
