--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,9 +44,7 @@ body {
     height: $element-day-size;
     background-color: #eee;
     border: 1px solid #000;
-    transition:
-      transform 0.5s,
-      background-color 0.5s;
+    transition: transform 0.5s, background-color 0.5s;
 
     &:hover {
       cursor: pointer;
@@ -55,11 +53,13 @@ body {
     }
   }
 
-  &--start-day-#{$days} {
-    :first-child {
-      margin-left: calc(
-        #{$element-day-size * $count} + #{$space-between-days * $count}
-      );
+  @each $day, $value in $days {
+    &--start-day-#{$day} {
+      &:first-child {
+        margin-left: calc(
+          #{$element-day-size * $value} + #{$space-between-days * $value}
+        );
+      }
     }
   }
 
