--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ $days: (
   thu: 3,
   fri: 4,
   sat: 5,
-  sun: 6
+  sun: 6,
 );
 
 html {
@@ -44,7 +44,9 @@ body {
     height: $element-day-size;
     background-color: #eee;
     border: 1px solid #000;
-    transition: transform 0.5s, background-color 0.5s;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
 
     &:hover {
       cursor: pointer;
