--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -1,37 +1,58 @@
-body {
+.page {
   display: flex;
   justify-content: center;
-  height: 100vh;
   align-items: center;
+  height: 100vh;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
 .calendar {
-  margin-left: 4px;
   display: flex;
   flex-wrap: wrap;
+  max-width: $cellSize * 7 + 10;
+  margin-left: 4px;
   padding-inline: 10px;
-  gap: $gapValue;
-  max-width: $calendarWidth;
+  gap: $cellValue;
+
+  &__day {
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    width: $cellSize;
+    height: $cellSize;
+
+    background-color: #eee;
+    border: 1px solid black;
+    transition-duration: 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
 
-.calendar__day {
-  display: flex;
-  box-sizing: border-box;
-  justify-content: center;
-  align-items: center;
-
-  background-color: #eee;
-  border: 1px solid black;
-  height: $daySize;
-  width: $daySize;
-  transition-duration: 0.5s;
+// add day number
+@for $dayNumber from 1 through 31 {
+  .calendar__day:nth-child(#{$dayNumber})::before {
+    content: '#{$dayNumber}';
+  }
 }
 
-.calendar__day:hover {
-  cursor: pointer;
-  background-color: #ffbfcb;
-  transform: translateY(-20px);
+// delete over days
+.calendar--month-length-28 .calendar__day:nth-child(n + 29),
+.calendar--month-length-29 .calendar__day:nth-child(n + 30),
+.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
+  display: none;
+}
+
+// position first day
+@each $name, $value in $daysOfWeek {
+  .calendar--start-day-#{$name} .calendar__day:first-child {
+    margin-left: ($value * ($cellSize + $cellValue)) - ($cellSize + $cellValue);
+  }
 }
