--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,4 @@
-$daySize: 100px;
+$cellSize: 100px;
 $countDays: 31;
-$gapValue: 1px;
-$calendarWidth: $daySize * 7 + 10;
+$cellValue: 1px;
 $daysOfWeek: ('mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
