--- a/src/style.css
+++ b/src/style.css
@@ -29,188 +29,188 @@
   transform: translateY(-20px);
 }
 
-.day1::before {
-  content: '1';
+.calendar__day1::before {
+  content: "1";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day2::before {
-  content: '2';
+.calendar__day2::before {
+  content: "2";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day3::before {
-  content: '3';
+.calendar__day3::before {
+  content: "3";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day4::before {
-  content: '4';
+.calendar__day4::before {
+  content: "4";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day5::before {
-  content: '5';
+.calendar__day5::before {
+  content: "5";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day6::before {
-  content: '6';
+.calendar__day6::before {
+  content: "6";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day7::before {
-  content: '7';
+.calendar__day7::before {
+  content: "7";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day8::before {
-  content: '8';
+.calendar__day8::before {
+  content: "8";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day9::before {
-  content: '9';
+.calendar__day9::before {
+  content: "9";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day10::before {
-  content: '10';
+.calendar__day10::before {
+  content: "10";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day11::before {
-  content: '11';
+.calendar__day11::before {
+  content: "11";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day12::before {
-  content: '12';
+.calendar__day12::before {
+  content: "12";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day13::before {
-  content: '13';
+.calendar__day13::before {
+  content: "13";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day14::before {
-  content: '14';
+.calendar__day14::before {
+  content: "14";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day15::before {
-  content: '15';
+.calendar__day15::before {
+  content: "15";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day16::before {
-  content: '16';
+.calendar__day16::before {
+  content: "16";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day17::before {
-  content: '17';
+.calendar__day17::before {
+  content: "17";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day18::before {
-  content: '18';
+.calendar__day18::before {
+  content: "18";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day19::before {
-  content: '19';
+.calendar__day19::before {
+  content: "19";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day20::before {
-  content: '20';
+.calendar__day20::before {
+  content: "20";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day21::before {
-  content: '21';
+.calendar__day21::before {
+  content: "21";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day22::before {
-  content: '22';
+.calendar__day22::before {
+  content: "22";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day23::before {
-  content: '23';
+.calendar__day23::before {
+  content: "23";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day24::before {
-  content: '24';
+.calendar__day24::before {
+  content: "24";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day25::before {
-  content: '25';
+.calendar__day25::before {
+  content: "25";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day26::before {
-  content: '26';
+.calendar__day26::before {
+  content: "26";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day27::before {
-  content: '27';
+.calendar__day27::before {
+  content: "27";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day28::before {
-  content: '28';
+.calendar__day28::before {
+  content: "28";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day29::before {
-  content: '29';
+.calendar__day29::before {
+  content: "29";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day30::before {
-  content: '30';
+.calendar__day30::before {
+  content: "30";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.day31::before {
-  content: '31';
+.calendar__day31::before {
+  content: "31";
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
