--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,84 @@
+$gap: 1px;
+$sizeSquare: 100px;
+$padding: 10px;
+$widthCalendar: $sizeSquare * 7 + $gap * 7 + $padding * 2;
+$days:
+  'mon' 0,
+  'tue' $sizeSquare + $gap,
+  'wen' 2 * ($sizeSquare + $gap),
+  'thu' 3 * ($sizeSquare + $gap),
+  'fri' 4 * ($sizeSquare + $gap),
+  'sat' 5 * ($sizeSquare + $gap),
+  'sun' 6 * ($sizeSquare + $gap);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: $widthCalendar;
+  padding: $padding;
+
+  &--first-day-sun {
+    @each $day, $margin in $days {
+      & :first-child {
+        margin-left: $margin;
+      }
+    }
+  }
+
+  &--length-month-30 {
+    @for $count from 30 through 30 {
+      & :nth-child(n + #{$count + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  &--length-month-31 {
+    & :nth-child(n + 32) {
+      display: none;
+    }
+  }
+
+  &__day {
+    position: relative;
+    width: $sizeSquare;
+    height: $sizeSquare;
+    background-color: #eee;
+    border: 1px solid #000;
+    cursor: pointer;
+    transition: transform 0.5s;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+
+    @for $item from 1 through 31 {
+      &:nth-child(#{$item})::before {
+        content: '#{$item}';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
 }
