--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,39 +10,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.calendar--month-length-28 .calendar__day:nth-child(n + 29) {
-  display: none;
-}
-.calendar--month-length-29 .calendar__day:nth-child(n + 30) {
-  display: none;
-}
-.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
-  display: none;
-}
-.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
-  display: none;
-}
-.calendar--start-day-sun .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 0 + 1px * 0);
-}
-.calendar--start-day-mon .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 1 + 1px * 1);
-}
-.calendar--start-day-tue .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 2 + 1px * 2);
-}
-.calendar--start-day-wed .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 3 + 1px * 3);
-}
-.calendar--start-day-thu .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 4 + 1px * 4);
-}
-.calendar--start-day-fri .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 5 + 1px * 5);
-}
-.calendar--start-day-sat .calendar__day:nth-child(1) {
-  margin-left: calc(100px * 6 + 1px * 6);
-}
 
 .calendar__day {
   width: 100px;
@@ -191,4 +158,46 @@
   content: '31';
 }
 
-/*# sourceMappingURL=main.css.map */
+.calendar--month-length-28__day:nth-child(n + 29) {
+  display: none;
+}
+
+.calendar--month-length-29__day:nth-child(n + 30) {
+  display: none;
+}
+
+.calendar--month-length-30__day:nth-child(n + 31) {
+  display: none;
+}
+
+.calendar--month-length-31__day:nth-child(n + 32) {
+  display: none;
+}
+
+.calendar--start-day-sun__day:nth-child(1) {
+  margin-left: calc(100px * 0 + 1px * 0);
+}
+
+.calendar--start-day-mon__day:nth-child(1) {
+  margin-left: calc(100px * 1 + 1px * 1);
+}
+
+.calendar--start-day-tue__day:nth-child(1) {
+  margin-left: calc(100px * 2 + 1px * 2);
+}
+
+.calendar--start-day-wed__day:nth-child(1) {
+  margin-left: calc(100px * 3 + 1px * 3);
+}
+
+.calendar--start-day-thu__day:nth-child(1) {
+  margin-left: calc(100px * 4 + 1px * 4);
+}
+
+.calendar--start-day-fri__day:nth-child(1) {
+  margin-left: calc(100px * 5 + 1px * 5);
+}
+
+.calendar--start-day-sat__day:nth-child(1) {
+  margin-left: calc(100px * 6 + 1px * 6);
+}
