--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -7,19 +7,22 @@ body {
   flex-wrap: wrap;
   width: calc(7 * $day-size + 6 * $gap + 2 * $padding);
   padding: 5px;
-  padding: $padding;
   margin: auto;
   gap: $gap;
 
   @each $day, $index in $days {
     &--start-day--#{$day} {
       & > .calendar__day:first-child {
-        margin-left: calc(
-          (#{$day-size} * #{$index}) +
-            (#{$gap} * #{$index}) +
-            (#{$padding}) +
-            (#{$border-size}) *
-            2
+        margin-left: if(
+          $day == 'mon',
+          0,
+          calc(
+            (#{$day-size} * #{$index}) +
+              (#{$gap} * #{$index}) +
+              (#{$padding}) +
+              (#{$border-size}) *
+              2
+          )
         );
       }
     }
