--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,188 +1,197 @@
 body {
   margin: 0;
+  box-sizing: border-box;
   display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 
 .calendar {
-  margin: auto;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
   width: calc(100px * 7 + 6px);
   padding: 0 10px;
+  position: relative;
 }
 
-.calendar .calendar__day {
+.calendar__day {
   background-color: #eee;
-  box-sizing: border-box;
   height: 100px;
   width: 100px;
   border: 1px solid black;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
-  color: bla;
+  position: relative;
 }
 
-.calendar .calendar__day:hover {
+.calendar__day:hover {
   cursor: pointer;
   background-color: #ffbfcb;
-  transition-duration: 0.5s;
   transform: translateY(-20px);
+  transition: transform 0.5s, background-color 0.5s;
 }
 
-.calendar--start-day-mon > .calendar__day--1 {
+.calendar__day::before {
+  content: "";
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  position: absolute;
+  color: black;
+}
+
+.calendar--start-day-mon > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (1 - 1));
 }
 
-.calendar--start-day-tue > .calendar__day--1 {
+.calendar--start-day-tue > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (2 - 1));
 }
 
-.calendar--start-day-wed > .calendar__day--1 {
+.calendar--start-day-wed > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (3 - 1));
 }
 
-.calendar--start-day-thu > .calendar__day--1 {
+.calendar--start-day-thu > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (4 - 1));
 }
 
-.calendar--start-day-fri > .calendar__day--1 {
+.calendar--start-day-fri > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (5 - 1));
 }
 
-.calendar--start-day-sat > .calendar__day--1 {
+.calendar--start-day-sat > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (6 - 1));
 }
 
-.calendar--start-day-sun > .calendar__day--1 {
+.calendar--start-day-sun > .calendar__day:nth-child(1) {
   margin-left: calc((100px + 1px) * (7 - 1));
 }
 
-.calendar__day--1::before {
+.calendar > .calendar__day:nth-child(1)::before {
   content: "1";
 }
 
-.calendar__day--2::before {
+.calendar > .calendar__day:nth-child(2)::before {
   content: "2";
 }
 
-.calendar__day--3::before {
+.calendar > .calendar__day:nth-child(3)::before {
   content: "3";
 }
 
-.calendar__day--4::before {
+.calendar > .calendar__day:nth-child(4)::before {
   content: "4";
 }
 
-.calendar__day--5::before {
+.calendar > .calendar__day:nth-child(5)::before {
   content: "5";
 }
 
-.calendar__day--6::before {
+.calendar > .calendar__day:nth-child(6)::before {
   content: "6";
 }
 
-.calendar__day--7::before {
+.calendar > .calendar__day:nth-child(7)::before {
   content: "7";
 }
 
-.calendar__day--8::before {
+.calendar > .calendar__day:nth-child(8)::before {
   content: "8";
 }
 
-.calendar__day--9::before {
+.calendar > .calendar__day:nth-child(9)::before {
   content: "9";
 }
 
-.calendar__day--10::before {
+.calendar > .calendar__day:nth-child(10)::before {
   content: "10";
 }
 
-.calendar__day--11::before {
+.calendar > .calendar__day:nth-child(11)::before {
   content: "11";
 }
 
-.calendar__day--12::before {
+.calendar > .calendar__day:nth-child(12)::before {
   content: "12";
 }
 
-.calendar__day--13::before {
+.calendar > .calendar__day:nth-child(13)::before {
   content: "13";
 }
 
-.calendar__day--14::before {
+.calendar > .calendar__day:nth-child(14)::before {
   content: "14";
 }
 
-.calendar__day--15::before {
+.calendar > .calendar__day:nth-child(15)::before {
   content: "15";
 }
 
-.calendar__day--16::before {
+.calendar > .calendar__day:nth-child(16)::before {
   content: "16";
 }
 
-.calendar__day--17::before {
+.calendar > .calendar__day:nth-child(17)::before {
   content: "17";
 }
 
-.calendar__day--18::before {
+.calendar > .calendar__day:nth-child(18)::before {
   content: "18";
 }
 
-.calendar__day--19::before {
+.calendar > .calendar__day:nth-child(19)::before {
   content: "19";
 }
 
-.calendar__day--20::before {
+.calendar > .calendar__day:nth-child(20)::before {
   content: "20";
 }
 
-.calendar__day--21::before {
+.calendar > .calendar__day:nth-child(21)::before {
   content: "21";
 }
 
-.calendar__day--22::before {
+.calendar > .calendar__day:nth-child(22)::before {
   content: "22";
 }
 
-.calendar__day--23::before {
+.calendar > .calendar__day:nth-child(23)::before {
   content: "23";
 }
 
-.calendar__day--24::before {
+.calendar > .calendar__day:nth-child(24)::before {
   content: "24";
 }
 
-.calendar__day--25::before {
+.calendar > .calendar__day:nth-child(25)::before {
   content: "25";
 }
 
-.calendar__day--26::before {
+.calendar > .calendar__day:nth-child(26)::before {
   content: "26";
 }
 
-.calendar__day--27::before {
+.calendar > .calendar__day:nth-child(27)::before {
   content: "27";
 }
 
-.calendar__day--28::before {
+.calendar > .calendar__day:nth-child(28)::before {
   content: "28";
 }
 
-.calendar__day--29::before {
+.calendar > .calendar__day:nth-child(29)::before {
   content: "29";
 }
 
-.calendar__day--30::before {
+.calendar > .calendar__day:nth-child(30)::before {
   content: "30";
 }
 
-.calendar__day--31::before {
+.calendar > .calendar__day:nth-child(31)::before {
   content: "31";
 }
 
