--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,13 +10,14 @@ $days-names: 'mon' 1,
 
 body {
   margin: 0;
+  box-sizing: border-box;
   display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 
 .calendar {
-  margin: auto;
-
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
@@ -24,39 +25,46 @@ body {
   width: calc(#{$day-side} * 7 + (1px * 6));
   padding: 0 #{$padding};
 
-  .calendar__day {
+  position: relative;
+
+  &__day {
     background-color: #eee;
-    box-sizing: border-box;
     height: $day-side;
     width: $day-side;
     border: 1px solid black;
+    box-sizing: border-box;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
-    font-family: Arial, sans-serif;
-    font-size: 30px;
-    color: bla;
+    position: relative;
   }
 
-  .calendar__day:hover {
+  &__day:hover {
     cursor: pointer;
     background-color: #ffbfcb;
-    transition-duration: 0.5s;
-    transform: translateY(-20px);
 
+    transform: translateY(-20px);
+    transition: transform 0.5s, background-color 0.5s;
+  }
+
+  &__day::before {
+    content: '';
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    position: absolute;
+    color: black;
   }
 }
 
 @each $name, $day in $days-names {
-  .calendar--start-day-#{$name} > .calendar__day--1 {
+  .calendar--start-day-#{$name} > .calendar__day:nth-child(1){
     margin-left: calc((#{$day-side} + 1px) * (#{$day} - 1));
   }
 }
 
 @for $i from 1 through 31 {
-  .calendar__day--#{$i}::before {
+  .calendar > .calendar__day:nth-child(#{$i})::before {
     content: '#{$i}';
   }
 }
