--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,57 @@
+@import './variables';
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: $font-size;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: calc(7 * (#{$day-size} + #{$gap}) - #{$gap} + 2 * #{$padding});
+  padding: $padding;
+  counter-reset: day-counter;
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    width: $day-size;
+    height: $day-size;
+
+    border: 1px solid $border-color;
+    background-color: $bcg-color;
+    transition: all 0.5s;
+
+    &::before {
+      content: counter(day-counter);
+      counter-increment: day-counter;
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $bcg-hover;
+      transform: translateY(-20px);
+    }
+  }
+
+  @each $day, $offset in $start-days {
+    .calendar--start-day-#{$day} .calendar__day:first-child {
+      margin-left: calc(($day-size + $gap) * #{$offset});
+    }
+  }
+
+  @for $i from 29 through 31 {
+    .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
